--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import "./variable";
+
 html {
     width: 100%;
     height: 100%;
@@ -23,10 +25,20 @@ html {
             font-style: normal;
         }
 
+        @font-face {
+            font-family: 'Inter';
+            src: url('../../public/fonts/Inter//static/Inter-Regular.ttf');
+            font-weight: 500;
+            font-style: normal;
+        }
+
+        width: 100%;
+        height: 100%;
         margin: 0px;
-        background-color: #F8F8F8;
+        background-color: $blue-100;
 
         h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1, span, p {
+            font-family: 'Inter', sans-serif;
             color: #333333;
         }
 
