hightlight product and gallery carousel

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -12,6 +12,7 @@ $green: #00B517;
 $orange-light: #FFE6BF;
 $orange: #FF9017;
 $red: #FA3434;
+$black-700: #202020;
 $black-600: #2D2D2D;
 $light: #FFFFFF;
 
