--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -85,20 +85,12 @@ html {
       font-style: normal;
     }
 
-    .swiper {
-      width: 100%;
-      height: 100%;
+    .bg-black {
+      background: $black-700;
     }
+  }
 
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #fff;
-
-      /* Center slide text vertically */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+  .carousel-caption {
+    bottom: 50%;
   }
 }
