--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -85,6 +85,10 @@ html {
       font-style: normal;
     }
 
+    .text-grey {
+      color: $grey-800;
+    }
+
     .swiper {
       width: 100%;
       height: 100%;
