--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,4 +1,5 @@
 $dark: #1C1C1C;
+$grey-800: #505050;
 $grey-600: #505050;
 $grey-500: #8B96A5;
 $grey-400: #BDC4CD;
@@ -13,6 +14,7 @@ $orange-light: #FFE6BF;
 $orange: #FF9017;
 $red: #FA3434;
 $black-600: #2D2D2D;
+$black-700: #202020;
 $light: #FFFFFF;
 
 
