--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -10,6 +10,7 @@
 .headerMenu {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   list-style: none;
   flex-direction: row;
   margin: 0;
@@ -19,14 +20,14 @@
   margin: 0 1rem;
 }
 
-.headerMenu li a {
+.headerMenu li .headerItem {
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   padding: 0.5rem 1rem;
 
 }
 
-.headerMenu li a:hover {
+.headerMenu li .headerItem:hover {
   color: #FA3434;
   background-color: #505050;
   border-radius: 0.5rem; 
@@ -36,7 +37,7 @@
   transition: background-color 0.2s ease-in-out;
 }
 
-.headerMenu li a:hover:hover {
+.headerMenu li .headerItem:hover:hover {
   background-color: #3e3e3e;
 }
 
