about us page and fix css change bg color and text color

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -28,7 +28,7 @@
 }
 
 .headerMenu li .headerItem:hover {
-  color: #FA3434;
+  color: #b90281;
   background-color: #505050;
   border-radius: 0.5rem; 
   padding: 0.5rem 1rem;
