--- a/src/styles/Shop.module.css
+++ b/src/styles/Shop.module.css
@@ -1,7 +1,6 @@
 .productContainer {
   transition: transform 0.2s, box-shadow 0.2s;
-  /* max-width: 500; */
-  /* min-height: 300px; */
+  min-width: 100%;
   flex-grow: 1;
   background-color: #f1efd8;
   box-sizing: 0px 2px 2px #0B101C;
@@ -39,7 +38,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #000;
+  background-color: #FFF;
   transform: scaleX(0);
   transition: transform 0.3s ease-in-out;
 }
