--- a/src/styles/Shop.module.css
+++ b/src/styles/Shop.module.css
@@ -39,9 +39,13 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #000;
+  background-color: #F5F5F5;
   transform: scaleX(0);
   transition: transform 0.3s ease-in-out;
+}
+
+.productsList li a {
+  color: #F5F5F5;
 }
 
 .productsList li:hover::after {
