--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,7 +26,7 @@ html {
     }
 
     margin: 0px;
-    background-color: $black-600;
+    background-color: #343a40;
     color: $grey-100;
 
     h6,
