--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,6 +27,7 @@ html {
 
     margin: 0px;
     background-color: #343a40;
+    // background-color: #343a40;
     color: $grey-100;
 
     h6,
@@ -97,8 +98,21 @@ html {
       background: $black-700;
     }
   }
-
+  
+  
   .carousel-caption {
     bottom: 50%;
   }
+}
+
+.custom-text-field .MuiInputLabel-root,
+.custom-text-field .MuiInputBase-root,
+.custom-text-field .MuiInput-underline:before,
+.custom-text-field .MuiInput-underline:hover:before {
+color: #F5F5F5;
+border-bottom-color: #F5F5F5;
+}
+
+.custom-text-field .MuiInputLabel-root.Mui-focused {
+color: #F5F5F5;
 }
